compiler/testData/diagnostics/tests/cast/AsArray.kt
// FIR_IDENTICAL
fun f(x: Any) = x <!UNCHECKED_CAST!>as Array<String><!>